# jacobian-conjecture

./: .gitignore  ARTICLE.md  Makefile  README.md  pyproject.toml
docs/: index.html  x-article.html
guide/00-start-here/: README.md
guide/01-functions-are-machines/: README.md
guide/02-the-undo-machine/: README.md
guide/03-polynomials/: README.md
guide/04-maps-of-the-plane/: README.md
guide/05-straight-maps-and-area/: README.md
guide/06-bending-the-grid/: README.md
guide/07-the-microscope/: README.md
guide/08-local-vs-global/: README.md
guide/09-the-conjecture/: README.md
guide/10-kicking-the-tires/: README.md
guide/11-why-it-was-so-hard/: README.md
guide/12-the-fall/: README.md
manim/: README.md  scenes.py
notes/: curriculum.md  research-content.md  research-delivery.md  research-pinchuk.md
src/jacobian_guide/: __init__.py  core.py  examples.py  plotting.py
src/viz/: ch00_hero.py  ch01_functions.py  ch02_inverse.py  ch03_polynomials.py  ch04_plane_maps.py  ch05_linear_determinant.py  ch06_polynomial_maps.py  ch07_jacobian.py  ch08_local_global.py  ch09_conjecture.py  ch10_roundtrip.py  ch11_history.py  ch12_fall.py  common.py  make_video.py
tests/: test_core.py  test_counterexample.py  test_pinchuk.py
